--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
     "graphql-yoga": "^1.18.3",
+    "prisma-client-lib": "^1.34.10",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
